--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="home_tab_online">线上</string>
     <string name="home_tab_todo">待参加</string>
     <string name="home_tab_mine">我的</string>
+    <string name="shui_mu_ke_ting">水木客厅</string>
 </resources>
