--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="home_tab_todo">待参加</string>
     <string name="home_tab_mine">我的</string>
     <string name="shui_mu_ke_ting">水木客厅</string>
+    <string name="nav">"  导航 "</string>
 </resources>
